# dos-actors

./: .gitignore  404.html  Cargo.toml  actors.html  client.html  crates.js  gmt-actor-model.html  index.html  model.html  multirate-model.dot  print.html  search-index.js  searchindex.js  searchindex.json  settings.html  source-files.js
.github/workflows/: rust.yml
actors/: Cargo.toml
actors/dsl/: Cargo.toml
actors/dsl/src/: lib.rs  model.rs
actors/src/: aggregation.rs  client.rs  graph.rs  lib.rs  macros.rs  system.rs
actors/src/actor/: actor.rs  check.rs  plain.rs  serde_with.rs  task.rs
actors/src/framework/: model.rs
actors/src/graph/: render.rs
actors/src/model/: plain.rs  unknown.rs
actors/src/system/: implementations.rs  interfaces.rs
book/src/grim/: grim.md
clients/: feedback-model.dot  feedback.html  multirate-model.dot  multirate.html  sig-log.html
clients/arrow/: Cargo.toml
clients/arrow/src/: arrow.rs  lib.rs
clients/core/: Cargo.toml
clients/core/src/: gif.rs  leftright.rs  operator.rs  select.rs
clients/crseo/: Cargo.toml
clients/crseo/benches/: ray_tracing.rs
clients/crseo/examples/: aco_wave_sensor.rs  sh48_to_m2.rs
clients/crseo/src/: calibration.rs  lib.rs  optical_model.rs  pyramid.rs
clients/dcs/examples/: dcs.rs
clients/dcs/src/: dcs_data.rs  mount_trajectory.rs
clients/domeseeing/: Cargo.toml  README.md
clients/domeseeing/src/: builder.rs  dome_seeing.rs  lib.rs
clients/fem/: Cargo.toml
clients/fem/benches/: benchmarks.rs  fem.rs
clients/fem/builder/: Cargo.toml
clients/fem/examples/: dc-gain-mismatch.rs
clients/fem/src/: actors_interface.rs  discrete_modal_solver.rs  discrete_state_space.rs  lib.rs
clients/io/: Cargo.toml
clients/io/src/: gmt_m2.rs  lib.rs  optics.rs
clients/lom/: Cargo.toml
clients/lom/src/: lib.rs
clients/m1-ctrl/: Cargo.toml
clients/m1-ctrl/examples/: step.rs
clients/m1-ctrl/examples/loadcells/: main.rs
clients/m1-ctrl/src/: actuators.rs  calibration.rs  hardpoints.rs  lib.rs
clients/m1-ctrl/src/hardpoints/: loadcell.rs
clients/m1-ctrl/tests/: main.rs
clients/m1-ctrl/tests/m1/: main.rs
clients/m1-ctrl/tests/mount-m1/: main.rs
clients/m1-ctrl/tests/mount-m1_dsl/: main.rs
clients/m1-ctrl/tests/mount-m1a-es_dsl/: main.rs
clients/m1-ctrl/tests/mount-m1b_dsl/: main.rs
clients/m1-ctrl/tests/segment_dynamic/: main.rs
clients/m1-ctrl/tests/segment_dynamic_with_mat/: main.rs
clients/m1-ctrl/tests/segment_static/: main.rs
clients/mount/: Cargo.toml
clients/servos/: Cargo.toml
clients/transceiver/: Cargo.toml
clients/windloads/: Cargo.toml
demos/src/: lib.rs
dos_actors/: all.html  enum.ActorError.html  index.html  macro.count.html  macro.impl_read!.html  macro.impl_read.html  macro.impl_update!.html  macro.impl_update.html  macro.impl_write.html  sidebar-items.js  struct.Actor.html  struct.ActorOutputBuilder.html  trait.AddOuput.html  trait.ArcMutex.html  trait.IntoInputs.html  trait.Task.html  trait.Update.html  type.Initiator.html  type.Result.html  type.Terminator.html
dos_actors/actor/: index.html  sidebar-items.js  struct.Actor.html  trait.Task.html  trait.Update.html  type.Initiator.html  type.Terminator.html
dos_actors/clients/: enum.ClientError.html  enum.Signal.html  index.html  sidebar-items.js  struct.Logging.html  struct.Sampler.html  struct.Signals.html
dos_actors/io/: index.html  sidebar-items.js  struct.Data.html  trait.Read.html  trait.Write.html
dos_actors/macros/: index.html
dos_actors/model/: enum.Completed.html  enum.ModelError.html  enum.Ready.html  enum.Running.html  enum.Unknown.html  index.html  sidebar-items.js  struct.Model.html
dos_actors/prelude/: enum.Signal.html  index.html  sidebar-items.js  struct.Actor.html  struct.Signals.html
gmt-actor-model/: gmt-actor-model.html
gmt-actor-model/actors/: actors.html
gmt-actor-model/aggregation/: aggregation.html  half-sampling-rate.dot  multirate-aggregated-model.dot  nominal-sampling-rate.dot  quarter-sampling-rate.dot
gmt-actor-model/clients/: client.html
gmt-actor-model/correctness/: correctness.html
gmt-actor-model/data/: data.html
gmt-actor-model/model/: integrated_model.dot  model.html
grim/: grim.html
grim/arrow/: arrow.html
grim/control/: control.html
grim/domeseeing/: domeseeing.html
grim/fem/: fem.html
grim/io/: io.html
grim/lom/: lom.html
grim/windloads/: windloads.html
implementors/dos_actors/: trait.ArcMutex.js
interface/: Cargo.toml
interface/benches/: main.rs
interface/src/: chain.rs  data.rs  doublet.rs  filing.rs  lib.rs  optics.rs  units.rs
src/dos_actors/: lib.rs.html  macros.rs.html  model.rs.html
systems/agws/: Cargo.toml
systems/agws/benches/: agws.rs  kernels.rs  sys.rs
systems/agws/src/: agws.rs  builder.rs  kernels.rs  lib.rs  qp.rs
systems/agws/src/agws/: sh24.rs  sh48.rs
systems/agws/src/agws/sh24/: kernel.rs
systems/agws/src/agws/sh48/: kernel.rs
systems/agws/src/builder/: shack_hartmann.rs
systems/agws/src/qp/: active_optics.rs  qp.rs
systems/m1/: Cargo.toml  build.rs
systems/m1/examples/: control_system.rs
systems/m1/modes/: Cargo.toml  cg.ipynb
systems/m1/modes/src/: main.rs
systems/m1/src/: fem.rs  lib.rs
systems/m1/src/fem/: assembly.rs  segment_control.rs  systems.rs
systems/m1/src/fem/assembly/: dispatch.rs  segment_controls.rs  segment_subsystems.rs
systems/m1/src/fem/assembly/dispatch/: in.rs  out.rs
systems/m1/src/fem/systems/: segment.rs
systems/m1/tests/: main.rs
systems/m2/: Cargo.toml
(+288 files in other folders)
