[package]
name = "gmt_dos-clients_m1-ctrl"
version = "6.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "GMT DOS M1 Control Client"
documentation = "https://docs.rs/gmt_dos-clients_m1-ctrl"
readme = "README.md"
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
# As-design M1 actuators and hardpoints control systems
center-as-design = { version = "0.2.1", package = "gmt_m1-ctrl_center-actuators" }
hardpoints-dynamics-as-design = { version = "0.2.1", package = "gmt_m1-ctrl_hardpoints-dynamics" }
outer-as-design = { version = "0.2.1", package = "gmt_m1-ctrl_outer-actuators" }

# As-built M1 actuators and hardpoints control systems
center = { version = "1.0", package = "gmt_m1-ctrl_center-actuators" }
hardpoints-dynamics = { version = "1.0", package = "gmt_m1-ctrl_hardpoints-dynamics" }
outer = { version = "1.0", package = "gmt_m1-ctrl_outer-actuators" }

interface.workspace = true
gmt_dos-clients_io.workspace = true
nalgebra = { workspace = true, features = ["serde", "serde-serialize"] }
serde.workspace = true
bincode = { workspace = true, optional = true }
gmt-fem.workspace = true
gmt_dos-clients_fem.workspace = true
log.workspace = true
# async-trait = "0.1.77"

[dev-dependencies]
matio-rs = { workspace = true, features = ["nalgebra"] }
tokio = { workspace = true, features = ["full"] }
env_logger.workspace = true
gmt_dos-actors = { workspace = true, features = ["serde"] }
gmt_dos-clients = { workspace = true, default-features = true }
gmt_dos-clients_io.workspace = true
gmt_dos-clients_mount.workspace = true
gmt_dos-clients_fem.workspace = true
gmt_dos-clients_arrow.workspace = true
anyhow.workspace = true
skyangle.workspace = true
gmt-fem.workspace = true
lom = { version = "2.2.1", package = "gmt-lom", features = ["main"] }
tokio-test.workspace = true
gmt_dos-clients_scope = { workspace = true, features = ["server"] }
gmt_dos-clients_scope-client.workspace = true

[features]
explicit-loadcells = []
serde = ["bincode/serde", "nalgebra/serde-serialize"]

[package.metadata.docs.rs]
features = ["serde"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(fem)',
  'cfg(m1_hp_force_extension)',
] }

[build-dependencies]
gmt-fem-code-builder.workspace = true
