[package]
name = "gmt_dos-systems_agws"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
description = "GMT DOS AGWS System"

[dependencies]
gmt_dos-actors.workspace = true
gmt_dos-clients.workspace = true
gmt_dos-clients_crseo.workspace = true
gmt_dos-clients_io = { workspace = true, features = ["crseo"] }
interface.workspace = true
log.workspace = true
nalgebra = { workspace = true, optional = true }
osqp = { version = "0.6.2", optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde-pickle = "1.2.0"
skyangle.workspace = true
thiserror.workspace = true

[dev-dependencies]
complot = "0.3.5"
criterion = "0.8.2"
gmt_dos-clients_io.workspace = true
tokio.workspace = true

[features]
default = ["qp"]
qp = ["nalgebra", "osqp", "serde"]
matio-rs = []
nalgebra = ["dep:nalgebra"]
osqp = ["dep:osqp"]
serde = ["dep:serde"]

[[bench]]
name = "agws"
harness = false

[[bench]]
name = "kernels"
harness = false
