[package]
name = "gmt_dos-systems_m1"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
description = "GMT DOS M1 System"

[dependencies]
gmt_dos-clients_m1-ctrl.workspace = true
gmt_dos-actors = { workspace = true, features = ["serde"] }
gmt_dos-clients = { workspace = true, features = ["serde"] }
interface.workspace = true
gmt_dos-clients_io.workspace = true
gmt_dos-clients_fem.workspace = true
nalgebra = { workspace = true, features = ["serde", "serde-serialize"] }
gmt-fem.workspace = true
log.workspace = true
serde.workspace = true
bincode = { workspace = true, optional = true }
thiserror.workspace = true
faer = { workspace = true, optional = true }

[features]
serde = ["bincode/serde", "nalgebra/serde-serialize"]
faer = ["dep:faer"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(fem)","cfg(m1_hp_force_extension)"] }

[dev-dependencies]
anyhow.workspace = true
gmt_dos-clients_arrow.workspace = true
tokio = { workspace = true, features = ["full"] }
gmt_dos-clients_mount.workspace = true
tokio-test.workspace = true

[build-dependencies]
gmt-fem-code-builder.workspace = true

[[test]]
name = "main"
path = "tests/main.rs"
required-features = ["gmt_dos-clients_fem/cuda"]
